# odd-collector-gcp

./: Dockerfile  README.md  collector_config.yaml  pyproject.toml
.github/: release-drafter.yaml
.github/workflows/: linter.yaml  release-build.yaml  release_latest_tag.yaml
config_examples/: bigquery.yaml  gcs.yaml  gcs_delta.yaml
docker/: README.md  demo.yaml
docker/config/: collector_config.yaml
odd_collector_gcp/: __main__.py
odd_collector_gcp/adapters/bigquery_storage/: adapter.py  dto.py  generator.py  mapper.py
odd_collector_gcp/adapters/bigquery_storage/mappers/: dataset.py  field.py  table.py
odd_collector_gcp/adapters/bigquery_storage/mappers/grammar/: field_types.lark
odd_collector_gcp/adapters/bigtable/: README.md  adapter.py  mapper.py
odd_collector_gcp/adapters/gcs/: README.md  adapter.py  file_system.py  utils.py
odd_collector_gcp/adapters/gcs/mapper/: bucket.py  dataset.py
odd_collector_gcp/adapters/gcs_delta/: adapter.py  client.py
odd_collector_gcp/adapters/gcs_delta/mappers/: delta_table.py  field.py
odd_collector_gcp/adapters/gcs_delta/models/: field.py
odd_collector_gcp/domain/: plugin.py
odd_collector_gcp/filesystem/: pyarrow_fs.py
odd_collector_gcp/utils/: get_properties.py
